# sugo-machine-application

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  Jenkinsfile  README.md  doxygen.conf
CoffeeAutomat/: CMakeLists.txt
CoffeeAutomat/include/: CoffeeAutomat.hpp  ICoffeeAutomat.hpp
CoffeeAutomat/src/: CoffeeAutomat.cpp
CoffeeAutomatApplication/: CMakeLists.txt
CoffeeAutomatApplication/include/: CoffeeAutomatApplication.hpp
CoffeeAutomatApplication/src/: CoffeeAutomatApplication.cpp  main.cpp
CoffeeAutomatApplication/test/: CoffeeAutomatSmokeTest.cpp
CoffeeAutomatController/: CMakeLists.txt
CoffeeAutomatController/include/: CoffeeAutomatController.hpp  ICoffeeAutomatController.hpp
CoffeeAutomatController/src/: CoffeeAutomatController.cpp
CoffeeAutomatService/: CMakeLists.txt
CoffeeAutomatService/include/: CoffeeAutomatService.hpp  CommunicationService.hpp  ICoffeeAutomatService.hpp
CoffeeAutomatService/src/: CoffeeAutomatService.cpp  CommunicationService.cpp
Common/: CMakeLists.txt
Common/include/: CommandExecutionComponent.hpp  CommandLineParser.hpp  CommandParameterParser.hpp  Configuration.hpp  ConfigurationFileParser.hpp  ConfigurationParser.hpp  Globals.hpp  IConfiguration.hpp  IRunnable.hpp  IStateMachine.hpp  Ident.hpp  Ios.hpp  Logger.hpp  Option.hpp  ServiceLocator.hpp  StateMachine.hpp  String.hpp  StringTokenizer.hpp  Thread.hpp  Timer.hpp
Common/mocks/: IConfigurationMock.hpp
Common/src/: Configuration.cpp  ConfigurationFileParser.cpp  ConfigurationParser.cpp  Logger.cpp  Thread.cpp
Common/test/: CommandLineParserTest.cpp  CommonTest.cpp  ConfigurationFileParserTest.cpp  ConfigurationTest.cpp  IConfigurationMock.hpp  IStateMachineMock.hpp
CupRotationTray/: CMakeLists.txt
CupRotationTray/include/: CupRotationTray.hpp  ICupRotationTray.hpp
CupRotationTray/src/: CupRotationTray.cpp
HardwareAbstractionLayer/: CMakeLists.txt
HardwareAbstractionLayer/HardwareAbstractionLayerCommon/: CMakeLists.txt
HardwareAbstractionLayer/HardwareAbstractionLayerImpl/: CMakeLists.txt
HardwareAbstractionLayer/HardwareAbstractionLayerRpi/: CMakeLists.txt
HardwareAbstractionLayer/HardwareAbstractionLayerStub/: CMakeLists.txt
HardwareAbstractionLayer/conf/: HardwareConfig.json  MachineConfig.json  tic_settings_device_14.txt
HardwareAbstractionLayer/doc/: README.md
HardwareAbstractionLayer/include/: AdafruitStepperMotorController.hpp  GpioPinEventObserver.hpp  HardwareAbstractionLayer.hpp  IAdcControl.hpp  IAdcFilter.hpp  IAdcInput.hpp  IGpioControl.hpp  IGpioController.hpp  IGpioPin.hpp  IHalObject.hpp  IHardwareAbstractionLayer.hpp  IStepperMotor.hpp  IStepperMotorControl.hpp  IStepperMotorController.hpp  ITemperatureSensor.hpp  ITemperatureSensorControl.hpp  Identifier.hpp  SysfsGpioController.hpp  UnitValue.hpp
HardwareAbstractionLayer/mocks/: IGpioControlMock.hpp  IGpioPinMock.hpp  IHardwareAbstractionLayerMock.hpp  IStepperMotorControlMock.hpp  IStepperMotorMock.hpp  ITemperatureSensorControlMock.hpp  ITemperatureSensorMock.hpp
HardwareAbstractionLayer/src/: AdafruitStepperMotorController.cpp  HardwareAbstractionLayer.cpp  IHardwareAbstractionLayer.cpp  SysfsGpioController.cpp
HardwareAbstractionLayer/test/: CMakeLists.txt  HardwareAbstractionLayerSmokeTest.cpp  HardwareAbstractionLayerSmokeTestConfig.json
HardwareAbstractionLayerRpi/: CMakeLists.txt
HardwareAbstractionLayerRpi/include/: HardwareAbstractionLayer.hpp  SysfsGpioController.hpp
HardwareAbstractionLayerRpi/src/: AdafruitStepperMotorController.cpp  HardwareAbstractionLayer.cpp  SysfsGpioController.cpp
HardwareAbstractionLayerX86/: CMakeLists.txt
HardwareAbstractionLayerX86/include/: HardwareAbstractionLayer.hpp  wiringPiI2C.h
HardwareComponents/: CMakeLists.txt
HardwareComponents/include/: CircularMotionController.hpp  ICircularMotionController.hpp  IMotionController.hpp  IPositionSwitch.hpp  IStepperMotor.hpp  PositionSwitch.hpp  StepperMotor.hpp
HardwareComponents/src/: CircularMotionController.cpp  PositionSwitch.cpp  StepperMotor.cpp
HardwareServiceComponents/: CMakeLists.txt
HardwareServiceComponents/include/: CircularMotionController.hpp  ICircularMotionController.hpp  IPositionSwitch.hpp  PositionSwitch.hpp
HardwareServiceComponents/src/: CircularMotionController.cpp
MachineApplication/: CMakeLists.txt  MachineServiceComponents.yaml
MachineApplication/conf/: MachineConfig.json
MachineApplication/include/: ComponentsExecutionGroup.hpp  FilamentCoilControl.hpp  FilamentCoilMotor.hpp  FilamentFeederMotor.hpp  FilamentMergerControl.hpp  FilamentMergerHeater.hpp  FilamentPreHeater.hpp  FilamentTensionSensor.hpp  MachineApplication.hpp  MachineControl.hpp  MachineController.hpp  UserInterfaceControl.hpp
MachineApplication/src/: ComponentsExecutionGroup.cpp  FilamentCoilControl.cpp  FilamentCoilMotor.cpp  FilamentFeederMotor.cpp  FilamentMergerControl.cpp  FilamentMergerHeater.cpp  FilamentPreHeater.cpp  FilamentTensionSensor.cpp  MachineApplication.cpp  MachineControl.cpp  MachineController.cpp  UserInterfaceControl.cpp  main.cpp
MachineApplication/test/: CMakeLists.txt  IntegrationTest.hpp  MachineApplicationIntegrationTest.cpp  MachineApplicationTest.cpp  MachineSmokeTest.cpp
MachineController/: CMakeLists.txt
MachineController/include/: IMachineController.hpp  MachineController.hpp
MachineController/src/: MachineController.cpp
MachineRemoteControl/: CMakeLists.txt
MachineRemoteControl/include/: Connection.hpp  IRequestHandler.hpp  RemoteControlProtocol.hpp  RemoteControlServer.hpp
MachineRemoteControl/src/: Connection.cpp  RemoteControlServer.cpp
MachineRemoteControl/test/: main.cpp
MachineRemoteControl/www/: index.html
MachineService/: CMakeLists.txt
MachineService/include/: IMachineService.hpp  (+1 more)
MachineServiceComponents/: CMakeLists.txt  MachineServiceComponents.yaml
MachineServiceGateway/: CMakeLists.txt
MessageBroker/: CMakeLists.txt
ServiceComponents/: CMakeLists.txt
test/: CMakeLists.txt  CoffeeAutomatSmokeTest.cpp  IntegrationTest.hpp  MachineApplicationIntegrationTest.cpp
(+453 files in other folders)
